--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "IC-RDP-project"]
-	path = IC-RDP-project
+	path = IC-RDP-project.optimized/IC-RDP-project
 	url = https://github.com/ivan-developer-01/IC-RDP-project
